# cpp-common-lib

./: CMakeLists.txt  CmakeLists.txt
include/ccl/: helper_functions.h  md5.h
include/cpp-common/: helper_functions.h  non_copyable.h
source/: helper_functions.cpp  md5.cpp
tests/: CMakeLists.txt  main.cpp  md5_tests.cpp
